--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="mtihany_root_directory">Mtihany</string>
+    <string name="next">NEXT</string>
+    <string name="show_selected">Show Selected</string>
 
     <string-array name="resourceDirectory">
         <item>/audio</item>
